--- a/app/src/main/res/layout/recyclerview_popular_movies.xml
+++ b/app/src/main/res/layout/recyclerview_popular_movies.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/rv_game_cover_image"
+            android:layout_width="227dp"
+            android:layout_height="320dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/monster_hunter_world_cover" />
+
+        <LinearLayout
+            android:id="@+id/rv_description_box"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:background="#ffff0000"
+            android:orientation="vertical"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_game_cover_image">
+
+            <TextView
+                android:id="@+id/rv_game_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Monster Hunter: World"
+                android:textColor="#FFFFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/rv_game_genre_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="3rd Person Action"
+                android:textColor="#FFE8E8E8"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</android.support.v7.widget.CardView>
