--- a/app/src/main/res/layout/fragment_popular_games.xml
+++ b/app/src/main/res/layout/fragment_popular_games.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp">
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
