--- a/app/src/main/res/layout/recyclerview_popular_movies.xml
+++ b/app/src/main/res/layout/recyclerview_popular_movies.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/rv_game_cover_image"
-            android:layout_width="227dp"
-            android:layout_height="320dp"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/monster_hunter_world_cover" />
@@ -22,10 +22,10 @@
         <LinearLayout
             android:id="@+id/rv_description_box"
             android:layout_width="0dp"
-            android:layout_height="75dp"
+            android:layout_height="80dp"
             android:background="#ffff0000"
             android:orientation="vertical"
-            android:padding="8dp"
+            android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rv_game_cover_image">
@@ -37,7 +37,8 @@
                 android:text="Monster Hunter: World"
                 android:textColor="#FFFFFFFF"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:maxLines="2"/>
 
             <TextView
                 android:id="@+id/rv_game_genre_text"
@@ -45,7 +46,8 @@
                 android:layout_height="wrap_content"
                 android:text="3rd Person Action"
                 android:textColor="#FFE8E8E8"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:maxLines="1"/>
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
