--- a/app/src/main/res/layout/recyclerview_popular_movies.xml
+++ b/app/src/main/res/layout/recyclerview_popular_movies.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/rv_game_cover_image"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/monster_hunter_world_cover" />
@@ -22,7 +22,7 @@
         <LinearLayout
             android:id="@+id/rv_description_box"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="65dp"
             android:background="#ffff0000"
             android:orientation="vertical"
             android:padding="4dp"
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:text="Monster Hunter: World"
                 android:textColor="#FFFFFFFF"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:maxLines="2"/>
 
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:text="3rd Person Action"
                 android:textColor="#FFE8E8E8"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:maxLines="1"/>
         </LinearLayout>
 
