--- a/app/src/main/res/layout/recyclerview_popular_movies.xml
+++ b/app/src/main/res/layout/recyclerview_popular_movies.xml
@@ -2,18 +2,18 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
         <ImageView
             android:id="@+id/rv_game_cover_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
@@ -26,28 +26,28 @@
             android:background="#ffff0000"
             android:orientation="vertical"
             android:padding="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/rv_game_cover_image"
+            app:layout_constraintStart_toStartOf="@+id/rv_game_cover_image"
             app:layout_constraintTop_toBottomOf="@+id/rv_game_cover_image">
 
             <TextView
                 android:id="@+id/rv_game_title_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:text="Monster Hunter: World"
                 android:textColor="#FFFFFFFF"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:maxLines="2"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rv_game_genre_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:text="3rd Person Action"
                 android:textColor="#FFE8E8E8"
-                android:textSize="14sp"
-                android:maxLines="1"/>
+                android:textSize="14sp" />
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
