--- a/app/src/main/res/layout/fragment_popular_games.xml
+++ b/app/src/main/res/layout/fragment_popular_games.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#323A45"
     android:paddingLeft="2dp"
     android:paddingRight="2dp">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/popular_games_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/popular_games_rv"/>
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
