--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -120,6 +120,7 @@
     </ScrollView>
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="0dp"
         android:layout_height="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,5 +138,15 @@
             android:visibility="invisible" />
 
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/game_detail_trailer_cover"
+        android:layout_width="0dp"
+        android:layout_height="170dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv" />
 
 </android.support.constraint.ConstraintLayout>
