--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -147,6 +147,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv" />
+        app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv"
+        android:visibility="invisible"/>
 
 </android.support.constraint.ConstraintLayout>
