--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/game_details_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gamedetails.view.GameDetailsActivity">
+    tools:context=".gamedetailscreen.view.GameDetailsActivity">
 
 
 </FrameLayout>
