--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -29,7 +29,7 @@
         android:id="@+id/game_detail_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="Monster Hunter: World"
@@ -42,44 +42,48 @@
 
     <TextView
         android:id="@+id/game_detail_developer"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="CAPCOM"
         android:textColor="@color/cardview_light_background"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
         app:layout_constraintStart_toStartOf="@+id/game_detail_title"
         app:layout_constraintTop_toBottomOf="@+id/game_detail_title" />
 
     <TextView
         android:id="@+id/game_detail_platform"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="PS4,XBONE,PC"
         android:textColor="@color/cardview_light_background"
+        app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
         app:layout_constraintStart_toStartOf="@+id/game_detail_title"
         app:layout_constraintTop_toBottomOf="@+id/game_detail_developer" />
 
     <TextView
         android:id="@+id/game_detail_rating"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="93/100"
         android:textColor="#ec1c24"
         android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
         app:layout_constraintStart_toStartOf="@+id/game_detail_title"
         app:layout_constraintTop_toBottomOf="@+id/game_detail_release_date" />
 
     <TextView
         android:id="@+id/game_detail_release_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="2018-Jan-26"
         android:textColor="@color/cardview_light_background"
+        app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
         app:layout_constraintStart_toStartOf="@+id/game_detail_platform"
         app:layout_constraintTop_toBottomOf="@+id/game_detail_platform" />
 
