--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -147,11 +147,31 @@
         android:id="@+id/game_detail_trailer_cover"
         android:layout_width="0dp"
         android:layout_height="170dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv"
-        android:visibility="invisible"/>
+        app:srcCompat="@drawable/ic_no_image" />
+
+    <ProgressBar
+        android:id="@+id/game_detail_developer_loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:indeterminate="true"
+        android:progressDrawable="@color/cardview_light_background"
+        app:layout_constraintBottom_toBottomOf="@+id/game_detail_developer"
+        app:layout_constraintStart_toStartOf="@+id/game_detail_developer"
+        app:layout_constraintTop_toTopOf="@+id/game_detail_developer" />
+
+    <ProgressBar
+        android:id="@+id/game_detail_platform_loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/game_detail_platform"
+        app:layout_constraintStart_toStartOf="@+id/game_detail_platform"
+        app:layout_constraintTop_toTopOf="@+id/game_detail_platform" />
 
 </android.support.constraint.ConstraintLayout>
