--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -12,7 +12,21 @@
         android:layout_height="170dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+    </android.support.v7.widget.RecyclerView>
+
+    <ImageView
+        android:id="@+id/game_detail_trailer_cover"
+        android:layout_width="0dp"
+        android:layout_height="170dp"
+        android:background="@color/cardview_light_background"
+        android:scaleType="fitCenter"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv"
+        app:srcCompat="@drawable/ic_no_image" />
 
     <ImageView
         android:id="@+id/game_detail_cover"
@@ -142,17 +156,6 @@
             android:visibility="invisible" />
 
     </FrameLayout>
-
-    <ImageView
-        android:id="@+id/game_detail_trailer_cover"
-        android:layout_width="0dp"
-        android:layout_height="170dp"
-        android:scaleType="fitCenter"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/game_detail_trailer_rv"
-        app:srcCompat="@drawable/ic_no_image" />
 
     <ProgressBar
         android:id="@+id/game_detail_developer_loading"
