--- a/app/src/main/res/layout/fragment_popular_games.xml
+++ b/app/src/main/res/layout/fragment_popular_games.xml
@@ -1,38 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#323A45"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp">
+    android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/popular_games_rv"
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#323A45"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp">
 
-    </android.support.v7.widget.RecyclerView>
-
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ProgressBar
-            android:id="@+id/loading_bar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/popular_games_rv"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <FrameLayout
+            android:layout_width="0dp"
             android:layout_height="4dp"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:indeterminateTint="@android:color/background_light"
-            android:visibility="invisible" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                android:id="@+id/loading_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@android:color/background_light"
+                android:visibility="invisible" />
 
 
-    </FrameLayout>
+        </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/drawer_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"
+        android:layout_gravity="start"
+        />
+
+
+</android.support.v4.widget.DrawerLayout>
