onOptionsItemSelected not called when Home clicked

--- a/app/src/main/res/layout/fragment_popular_games.xml
+++ b/app/src/main/res/layout/fragment_popular_games.xml
@@ -12,14 +12,23 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#323A45"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp">
+        android:background="#323A45">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/popular_games_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:layout_editor_absoluteX="44dp">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -27,8 +36,9 @@
             android:layout_width="0dp"
             android:layout_height="4dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <ProgressBar
                 android:id="@+id/loading_bar"
