created queries for ps4 order by rating and upcoming game order by release date, also made detail view to show release date corresponding to specific platform

--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -16,7 +16,7 @@
                     android:icon="@drawable/ps4"
                     android:title="Highest Rated" />
                 <item
-                    android:id="@+id/p4_upcoming"
+                    android:id="@+id/ps4_upcoming"
                     android:icon="@drawable/ps4"
                     android:title="Upcoming Games" />
 
