App almost complete, just need some polishing

--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -9,17 +9,17 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/game_detail_trailer_rv"
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="185dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
     </android.support.v7.widget.RecyclerView>
 
     <ImageView
         android:id="@+id/game_detail_trailer_cover"
         android:layout_width="0dp"
-        android:layout_height="170dp"
+        android:layout_height="185dp"
         android:background="@color/cardview_light_background"
         android:scaleType="fitCenter"
         android:visibility="invisible"
@@ -33,7 +33,7 @@
         android:layout_width="150dp"
         android:layout_height="190dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="154dp"
+        android:layout_marginTop="175dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="Monster Hunter: World"
         android:textColor="@color/cardview_light_background"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/game_detail_cover"
@@ -58,7 +58,8 @@
         android:id="@+id/game_detail_developer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:maxLines="1"
         android:text="CAPCOM"
         android:textColor="@color/cardview_light_background"
         android:textSize="14sp"
@@ -71,7 +72,7 @@
         android:id="@+id/game_detail_platform"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="PS4,XBONE,PC"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
@@ -82,7 +83,7 @@
         android:id="@+id/game_detail_rating"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="93/100"
         android:textColor="#ec1c24"
         android:textStyle="italic"
@@ -94,7 +95,7 @@
         android:id="@+id/game_detail_release_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="2018-Jan-26"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="@+id/game_detail_title"
@@ -105,7 +106,7 @@
         android:id="@+id/game_detail_summary_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Summary"
         android:textColor="@color/cardview_light_background"
         android:textSize="18sp"
@@ -116,7 +117,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
