--- a/app/src/main/res/layout/recyclerview_popular_movies.xml
+++ b/app/src/main/res/layout/recyclerview_popular_movies.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,6 +16,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="150:200"
             app:srcCompat="@drawable/monster_hunter_world_cover" />
 
         <LinearLayout
